--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,3 +156,19 @@ button.primary-btn{
 button.primary-btn:hover{
     background-color: #666;
 }
+
+@media only screen and (max-width: 980px) {
+    body{
+        background: red;
+    }
+}
+@media only screen and (max-width: 768px) {
+    body{
+        background: blue;
+    }
+}
+@media only screen and (max-width: 640px) {
+    body{
+        background: teal;
+    }
+}
