--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,8 +158,11 @@ button.primary-btn:hover{
 }
 
 @media only screen and (max-width: 980px) {
-    body{
-        background: red;
+    .wrap {
+        grid-template-columns: 10px 700px 1fr;
+    }
+    .grid-portfolio {
+        grid-template: repeat(3, 190px)/repeat(2, 1fr);
     }
 }
 @media only screen and (max-width: 768px) {
